--- a/settings.ini
+++ b/settings.ini
@@ -3,7 +3,7 @@
 host = github
 lib_name = cool_api
 # For Enterprise Git add variable repo_name and company name
-# repo_name = analytics
+repo_name = didactic-waffle
 # company_name = nike
 
 user = rohitrawat
@@ -46,11 +46,11 @@ doc_host =  https://%(user)s.github.io
 #doc_host = https://pages.github.%(company_name)s.com.  
 
 
-doc_baseurl = /%(lib_name)s/
+doc_baseurl = /%(repo_name)s/
 # For Enterprise Github pages docs use:
 # doc_baseurl = /%(repo_name)s/%(lib_name)s/
 
-git_url = https://github.com/%(user)s/%(lib_name)s/tree/%(branch)s/
+git_url = https://github.com/%(user)s/%(repo_name)s/tree/%(branch)s/
 # For Enterprise Github use:
 #git_url = https://github.%(company_name)s.com/%(repo_name)s/%(lib_name)s/tree/%(branch)s/
 
